# signalbus

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tests.py
.github/workflows/: publish.yml  tests.yml
signalbus/: __init__.py
